# allegro

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yaml  tests.yaml
allegro/: __init__.py  _compile.py  _extern.py  _keys.py  _version.py
allegro/model/: __init__.py  _allegro.py  allegro_models.py
allegro/nn/: __init__.py  _allegro.py  _edgeembed.py  _edgewise.py  _fc.py  _misc.py  _norm_basis.py  _radial_basis.py  _typeembed.py  edgewise.py  scalarembed.py  spline.py  tensorembed.py
allegro/nn/_strided/: __init__.py  _channels.py  _contract.py  _cueq_contracter.py  _flashallegro.py  _layout.py  _lexsort.py  _linear.py  _spmm.py
allegro/utils/: __init__.py  arg_processing.py
configs/: example.yaml  minimal.yaml  qmmm.yaml  tutorial.yaml
docs/: conf.py  index.rst
docs/guide/: accelerations.md  accelerations.rst  allegro_model.rst  api.rst  cuequivariance.md  guide.rst  lammps.md  triton.md
docs/intro/: intro.rst
nequip_allegro/: __init__.py
nequip_allegro/model/: _allegro.py
nequip_allegro/nn/: __init__.py  _allegro.py  _fc.py  _norm_basis.py  cutoffs.py
nequip_allegro/nn/_strided/: __init__.py  _channels.py  _contract.py  _linear.py  _spmm.py
tests/: conftest.py
tests/model/: test_allegro.py
tests/nn/: test_contract.py  test_contract_basic.py  test_contract_kernels.py  test_mlp.py  test_norm_basis.py  test_weighter.py
tests/nn/strided/: test_contract.py  test_linear.py  test_weighter.py
tests/utils/: test_compile_utils.py
